testsuite/tests/lexical_envs/invalid_subunit_root/ple_unit_root_field.lkt
grammar foo_grammar {
    @main_rule main_rule <- ASTList[Example]+(example)
    example <- Example("example" ?example)
}
